[wip] Accessing prebuilt kernels from JarFiles